# crypto-pro-examples-cmake

./: CMakeLists.txt  DISCLAIMER.md
cmake/: FindCryptoPro.cmake
src/: samples_util.h
src/AddSignCades/: AddSignCades.cpp
src/CounterSign/: CounterSign.cpp
src/EncryptDecryptMessage/: EncryptDecryptMessage.cpp
src/GetCadesAttributes/: GetCadesAttributes.cpp
src/GetCadesCountersignatureAttributes/: GetCadesCountersignatureAttributes.cpp
src/LowlevelDisplayDetachedSignature/: LowlevelDisplayDetachedSignature.cpp
src/LowlevelDisplaySignatures/: LowlevelDisplaySignatures.cpp
src/LowlevelEnhanceCadesBes/: LowlevelEnhanceCadesBes.cpp
src/LowlevelSignCades/: LowlevelSignCades.cpp
src/LowlevelSignCadesBes/: LowlevelSignCadesBes.cpp
src/LowlevelSignCadesStream/: LowlevelSignCadesStream.cpp
src/LowlevelSignDetachedCades/: LowlevelSignDetachedCades.cpp
src/LowlevelVerifyCades/: LowlevelVerifyCades.cpp
src/LowlevelVerifyCadesBes/: LowlevelVerifyCadesBes.cpp
src/SimplifiedDisplaySignatures/: SimplifiedDisplaySignatures.cpp
src/SimplifiedEnhanceCadesBes/: SimplifiedEnhanceCadesBes.cpp
src/SimplifiedSignCades/: SimplifiedSignCades.cpp
src/SimplifiedSignCadesBes/: SimplifiedSignCadesBes.cpp
src/SimplifiedSignHashCades/: SimplifiedSignHashCades.cpp
src/SimplifiedSignVerifyXadesBes/: SimplifiedSignVerifyXadesBes.cpp
src/SimplifiedVerifyCades/: SimplifiedVerifyCades.cpp
src/SimplifiedVerifyCadesBes/: SimplifiedVerifyCadesBes.cpp
src/SimplifiedVerifyHashCades/: SimplifiedVerifyHashCades.cpp
src/VerifyCountersign/: VerifyCountersign.cpp
